<resources>
    <string name="app_name">Lets Cook</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_wishlist">Yêu thích</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_notes">Ghi chú</string>
    <string name="title_profile">Hồ sơ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>
</resources>